# SharpMCPServer

./: .editorconfig  .gitattributes  .gitignore  .vsconfig  AGENTS.md  AGENT_ROUTER_TESTS.md  Directory.Build.props  Directory.Packages.props  MCPServer.slnx  NuGet.Config  README.md
MCPServer.AgentRouter.Abstractions/: AgentRouterMetadata.cs  AgentRouterMetadataKeys.cs  AgentRouterNames.cs  AgentRouterRunStatuses.cs  IAgentRouter.cs  IAgentRouterProvider.cs  IAgentRouterRoute.cs  IAgentRouterSelector.cs  MCPServer.AgentRouter.Abstractions.csproj
MCPServer.AgentRouter.Application/: AgentRouterApplicationModule.cs  DependencyInjection.cs  MCPServer.AgentRouter.Application.csproj
MCPServer.AgentRouter.Application.Tests/: MCPServer.AgentRouter.Application.Tests.csproj
MCPServer.AgentRouter.Defaults/: AgentRouterDefaultsModule.cs  MCPServer.AgentRouter.Defaults.csproj
MCPServer.AgentRouter.Defaults.Tests/: MCPServer.AgentRouter.Defaults.Tests.csproj
MCPServer.AgentRouter.Domain/: MCPServer.AgentRouter.Domain.csproj
MCPServer.AgentRouter.Domain.Tests/: MCPServer.AgentRouter.Domain.Tests.csproj
MCPServer.AgentRouter.Hosting/: AgentRouterBackgroundServiceOptions.cs  AgentRouterHostedProviderModule.cs  AgentRouterHostingModule.cs  MCPServer.AgentRouter.Hosting.csproj  README.md
MCPServer.AgentRouter.Hosting.Tests/: MCPServer.AgentRouter.Hosting.Tests.csproj
MCPServer.ChatLauncher/: Program.cs
python/: README.md  pyproject.toml  setup.py
python/src/mcpserver_agentrouter_bridge/: __init__.py  bridge.py
python/tests/: test_bridge.py  test_native_smoke.py
(+705 files in other folders)
